@@ -110,6 +110,8 @@ public class AuthenticationWithPersistentSessionsIT implements AuthenticationTes
 
   @Autowired private TestRestTemplate testRestTemplate;
 
+  @Autowired private OperateProperties operateProperties;
+
   @MockBean private IdentityService identityService;
 
   @Test
@@ -125,7 +127,6 @@ public class AuthenticationWithPersistentSessionsIT implements AuthenticationTes
   public void testLoginSuccess() throws Exception {
     // Step 1 try to access document root
     ResponseEntity<String> response = get(ROOT);
-    assertThatCookiesAndSecurityHeadersAreSet(response);
     final HttpEntity<?> cookies = httpEntityWithCookie(response);
 
     assertThatRequestIsRedirectedTo(response, urlFor(LOGIN_RESOURCE));
@@ -148,6 +149,8 @@ public class AuthenticationWithPersistentSessionsIT implements AuthenticationTes
     assertThatRequestIsRedirectedTo(response, urlFor(ROOT));
     // Step 5  check if access to url possible
     response = get(ROOT, cookies);
+    assertThatCookiesAndSecurityHeadersAreSet(
+        response, operateProperties.isCsrfPreventionEnabled());
     assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
   }
 
@@ -155,7 +158,6 @@ public class AuthenticationWithPersistentSessionsIT implements AuthenticationTes
   public void testLoginFailedWithNoPermissions() throws Exception {
     // Step 1 try to access document root
     ResponseEntity<String> response = get(ROOT);
-    assertThatCookiesAndSecurityHeadersAreSet(response);
     final HttpEntity<?> cookies = httpEntityWithCookie(response);
 
     assertThatRequestIsRedirectedTo(response, urlFor(LOGIN_RESOURCE));
@@ -182,7 +184,6 @@ public class AuthenticationWithPersistentSessionsIT implements AuthenticationTes
   public void testLoginFailedWithNoReadPermissions() throws Exception {
     // Step 1 try to access document root
     ResponseEntity<String> response = get(ROOT);
-    assertThatCookiesAndSecurityHeadersAreSet(response);
     final HttpEntity<?> cookies = httpEntityWithCookie(response);
 
     assertThatRequestIsRedirectedTo(response, urlFor(LOGIN_RESOURCE));
@@ -211,7 +212,7 @@ public class AuthenticationWithPersistentSessionsIT implements AuthenticationTes
 
   private HttpEntity<?> httpEntityWithCookie(final ResponseEntity<String> response) {
     final HttpHeaders headers = new HttpHeaders();
-    headers.add("Cookie", getCookies(response).get(0));
+    headers.add("Cookie", getCookies(response).getFirst());
     return new HttpEntity<>(new HashMap<>(), headers);
   }
 
